# opencl-option-pricer

./: .gitmodules  CMakeLists.txt  README.md
convergence_tests/: convergence_test.rb
convergence_tests/asian_arithmetic/: project_call_05.json  project_put_05.json
convergence_tests/basket_arithmetic/: project_call_06.json  project_call_07.json  project_put_03.json  project_put_04.json  project_put_05.json  project_put_06.json  project_put_07.json
kernels/: arithmetic_asian.cl  arithmetic_basket.cl  european.cl  geometric_asian.cl  geometric_basket.cl  matvecmult.cl  means.h  monte_carlo.h  random.h  random_kernel.cl  random_test.cl  random_test_host.cl  statistics.h  stdnormal.h
kernels/mwc64x/: mwc64x.cl
kernels/mwc64x/mwc64x/: mwc64x_rng.cl  skip_mwc.cl
src/: asian_arithmetic_opencl_option.cpp  asian_arithmetic_opencl_option.hpp  asian_geometric_opencl_option.cpp  asian_geometric_opencl_option.hpp  basket_arithmetic_opencl_option.cpp  basket_arithmetic_opencl_option.hpp  basket_geometric_opencl_option.cpp  basket_geometric_opencl_option.hpp  closed_form_opencl_option.cpp  closed_form_opencl_option.hpp  european_opencl_option.cpp  european_opencl_option.hpp  json_helper.cpp  json_helper.hpp  json_outputter.cpp  json_outputter.hpp  kernels.cpp  kernels.h  main.cpp  matrix.cpp  matrix.h  monte_carlo.cpp  monte_carlo_opencl_option.cpp  monte_carlo_opencl_option.hpp  opencl_option.cpp  opencl_option.hpp  opencl_utils.cpp  opencl_utils.hpp  option.hpp  options.cpp  options.hpp  random.cpp  random_host.cpp  statistics.cpp  statistics.h  statistics_opencl.cpp  statistics_opencl.h  types.h
tests/: asian_arithmetic_basic.json  asian_geometric_basic.json  basket_geometric_basic.json  european_basic.json  test.rb
tests/asian_arithmetic/: call_none_0.json
tests/asian_arithmetic/geometric/: project_call_01.json  project_call_02.json  project_put_01.json  (+7 more)
tests/asian_geometric/: project_call_01.json  project_call_02.json  project_call_03.json  project_call_04.json  project_call_05.json  project_put_01.json  project_put_02.json  project_put_03.json  project_put_04.json  project_put_05.json
tests/basket_arithmetic/: call_none_0.json
tests/basket_geometric/: project_call_01.json  project_call_02.json  project_call_03.json  project_call_04.json  project_call_05.json  project_call_06.json  project_call_07.json  project_put_01.json  project_put_02.json  project_put_03.json  project_put_04.json  project_put_05.json  project_put_06.json  project_put_07.json
tests/european/: project_call_01.json  project_call_02.json  project_call_03.json  project_call_04.json  project_put_01.json  project_put_02.json  project_put_03.json  project_put_04.json
(+101 files in other folders)
